@@ -14,13 +14,14 @@ import org.bukkit.scheduler.BukkitRunnable;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
 public class AdvancementMessage extends DisplayMessage	{
 
   private NamespacedKey id;
-  private String icon;
-  private String title, description, background;
-  private String frame = "task";
+  private int modelDataId = -1;
+  private final String title, icon, description, background, frame = "task";
   private boolean announce = false, toast = true;
 
   /**
@@ -28,10 +29,9 @@ public class AdvancementMessage extends DisplayMessage	{
    * @param id A unique id for this Advancement, will be the name if advancement file
    * @param title Message to show/send
    * @param icon minecraft id of display item (minecraft:...)
-   * @param background minecraft id of background item (minecraft:...)
    */
-  public AdvancementMessage(String id, String title, String icon, String background)	{
-    this(new NamespacedKey(McTools.getInstance(), id), title, icon, background);
+  public AdvancementMessage(String id, String title, String icon, int modelDataId)	{
+    this(new NamespacedKey(McTools.getInstance(), id), title, icon, modelDataId);
   }
 
   /**
@@ -39,22 +39,26 @@ public class AdvancementMessage extends DisplayMessage	{
    * @param id A unique id for this Advancement, will be the name if advancement file
    * @param title Message to show/send
    * @param icon minecraft id of display item (minecraft:...)
-   * @param background minecraft id of background item (minecraft:...)
    */
-  public AdvancementMessage(NamespacedKey id, String title, String icon, String background) {
+  public AdvancementMessage(NamespacedKey id, String title, String icon, int modelDataId) {
     this.id = id;
     this.title = title;
     this.description = "§7This Toast was created with DreamAPI";
     this.icon = icon;
+    this.background = "minecraft:textures/gui/advancements/backgrounds/dirt.png";
+    this.modelDataId = modelDataId;
   }
 
   @Override
   public void showTo(Player player)	{
-    showTo(Arrays.asList(player));
+    showTo(List.of(player));
   }
 
   @Override
-  public void showTo(Collection<? extends Player> players)	{
+  public void showTo(List<Player> players)	{
+
+    if (McTools.getInstance() == null) return;
+
     add();
     grant(players);
     new BukkitRunnable() {
@@ -62,31 +66,30 @@ public class AdvancementMessage extends DisplayMessage	{
       @Override
       public void run() {
         revoke(players);
-        remove();
+        if (!remove()) McTools.getInstance().getServer().getLogger().info("Advancement " + id + " failed to remove");
       }
-    }.runTaskLater(McTools.getInstance(), 20);
+    }.runTaskLater(McTools.getInstance(), 5);
   }
 
   @SuppressWarnings("deprecation")
-  private void add()	{
+  private Advancement add()	{
     try {
-      Bukkit.getUnsafe().loadAdvancement(id, getJson());
-        Bukkit.getLogger().info("Advancement " + id + " saved");
+      McTools.getInstance().getServer().getLogger().info("Advancement " + id + " saved");
+      return McTools.getInstance().getServer().getUnsafe().loadAdvancement(id, getJson());
     } catch (IllegalArgumentException e){
-      Bukkit.getLogger().info("Error while saving, Advancement " + id + " seems to already exist");
-    }
-  }
+      if (remove()) add();
 
-  @SuppressWarnings("deprecation")
-  private void remove()	{
-    Bukkit.getUnsafe().removeAdvancement(id);
+      McTools.getInstance().getServer().getLogger().info("Advancement " + id + " already saved, remove and add for corrections");
+    }
+    return null;
   }
 
   private void grant(Collection<? extends Player> players) {
-    Advancement advancement = Bukkit.getAdvancement(id);
+    Advancement advancement = McTools.getInstance().getServer().getAdvancement(id);
     AdvancementProgress progress;
     for (Player player : players)	{
 
+      assert advancement != null;
       progress = player.getAdvancementProgress(advancement);
       if (!progress.isDone())	{
         for (String criteria : progress.getRemainingCriteria())	{
@@ -96,11 +99,17 @@ public class AdvancementMessage extends DisplayMessage	{
     }
   }
 
-  private void revoke(Collection<? extends Player> players)	{
-    Advancement advancement = Bukkit.getAdvancement(id);
+  @SuppressWarnings("deprecation")
+  private boolean remove() {
+    return McTools.getInstance().getServer().getUnsafe().removeAdvancement(id);
+  }
+
+  private void revoke(List<Player> players)	{
+    Advancement advancement = McTools.getInstance().getServer().getAdvancement(id);
     AdvancementProgress progress;
     for (Player player : players)	{
 
+      assert advancement != null;
       progress = player.getAdvancementProgress(advancement);
       if (progress.isDone())	{
         for (String criteria : progress.getAwardedCriteria())	{
@@ -115,7 +124,15 @@ public class AdvancementMessage extends DisplayMessage	{
     JsonObject json = new JsonObject();
 
     JsonObject icon = new JsonObject();
-    icon.addProperty("item", this.icon);
+    icon.addProperty("id", this.icon);
+
+
+
+    if (this.modelDataId >= 0) {
+      JsonObject modelDataId = new JsonObject();
+      modelDataId.addProperty("minecraft:custom_model_data", this.modelDataId);
+      icon.add("components", modelDataId);
+    }
 
     JsonObject display = new JsonObject();
     display.add("icon", icon);
